<resources>
    <string name="app_name">tobegood</string>
    <string name="welcome">welcome</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="eat">eat</string>>
    <string name="exercise">exercise</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="id">id</string>
    <string name="name">name</string>
    <string name="password">password</string>
    <string name="sex">sex</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="vegan">vegan</string>
    <string name="height">height</string>
    <string name="weight">weight</string>
    <string name="Recipe_One">recipe1</string>
    <string name="Recipe_Two">recipe2</string>
    <string name="Recipe_Three">recipe3</string>
    <string name="Exercise_One">exercise1</string>
    <string name="Exercise_Two">exercise2</string>
    <string name="Exercise_Three">exercise3</string>
    <string name="detail">detail</string>
    <string name="complete">complete</string>
</resources>