<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EatActivity">

    <ImageView
        android:id="@+id/Image_eat_welcome"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/welcome"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome1"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1"
        />

    <ImageView
        android:id="@+id/Image_eat_recipe1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/Recipe_One"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome1"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1"
        />

    <ImageView
        android:id="@+id/Image_eat_recipe2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/Recipe_Two"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome1"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1"
        />

    <ImageView
        android:id="@+id/Image_eat_recipe3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/Recipe_Three"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome1"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1"
        />
</androidx.constraintlayout.widget.ConstraintLayout>