<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/Image_first_choice_welcome"
        android:src="@drawable/welcome1"
        android:contentDescription="@string/welcome"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        app:layout_constraintWidth_percent="1"
        app:layout_constraintHeight_percent="0.4"

        />
    <!-- 首页面顶上的图片，一个welcome图片-->

    <Button
        android:id="@+id/button_first_choice_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Image_first_choice_welcome"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        />

    <!--    首页面的Login按钮    -->

    <Button
        android:id="@+id/button_first_choice_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_first_choice_login"
        android:layout_marginTop="60dp"
        android:text="@string/register"
        />

    <!--    首页面的Register按钮    -->

</androidx.constraintlayout.widget.ConstraintLayout>