<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <ImageView
        android:id="@+id/Image_login_welcome"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/welcome"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome1"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1"

        />
    <!-- 注册顶上的图片，一个welcome图片-->

    <TextView
        android:id="@+id/Text_login_id"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:text="@string/id"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight="30"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/Edit_login_id"
        app:layout_constraintTop_toBottomOf="@id/Image_login_welcome" />

    <EditText
        android:id="@+id/Edit_login_id"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        app:layout_constraintHorizontal_weight="70"
        app:layout_constraintLeft_toRightOf="@id/Text_login_id"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Image_login_welcome" />

    <TextView
        android:id="@+id/Text_login_password"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:gravity="center_vertical"
        android:text="@string/password"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight="30"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/Edit_login_password"
        app:layout_constraintTop_toBottomOf="@id/Text_login_id" />

    <EditText
        android:id="@+id/Edit_login_password"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        app:layout_constraintHorizontal_weight="70"
        android:password="true"
        app:layout_constraintLeft_toRightOf="@id/Text_login_password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Edit_login_id" />


    <Button
        android:id="@+id/Button_login_login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Text_login_password"
        android:text="@string/login"/>

</androidx.constraintlayout.widget.ConstraintLayout>


