<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register">

    <ImageView
        android:id="@+id/Image_register_welcome"
        android:src="@drawable/welcome1"
        android:contentDescription="@string/welcome"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        app:layout_constraintWidth_percent="1"
        app:layout_constraintHeight_percent="0.4"

        />
    <!-- 注册顶上的图片，一个welcome图片-->

    <TextView
        android:id="@+id/Text_register_id"
        android:layout_height="20dp"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@id/Image_register_welcome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/Edit_register_id"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:text="@string/id"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight="30"
        />

    <EditView
        android:id="@+id/Edit_register_id"
        android:layout_height="20dp"
        android:layout_width="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/Image_register_welcome"
        app:layout_constraintLeft_toRightOf = "@id/Text_register_id"
        app:layout_constraintRight_toRightOf = "parent"
        app:layout_constraintHorizontal_weight="70"
        />

    <TextView
        android:id="@+id/Text_register_name"
        android:layout_height="20dp"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@id/Text_register_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/Edit_register_name"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:text="@string/name"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight="30"
        />

    <EditView
        android:id="@+id/Edit_register_name"
        android:layout_height="20dp"
        android:layout_width="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/Edit_register_id"
        app:layout_constraintLeft_toRightOf = "@id/Text_register_name"
        app:layout_constraintRight_toRightOf = "parent"
        app:layout_constraintHorizontal_weight="70"
        />


</androidx.constraintlayout.widget.ConstraintLayout>