<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExerciseActivity">

    <ImageView
        android:id="@+id/Image_eat_welcome"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/welcome"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome1"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1"
        />

    <ImageView
        android:id="@+id/Image_eat_exercise1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/Exercise_One"
        android:scaleType="centerCrop"
        android:src="@drawable/exercise002"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintDimensionRatio="4:3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Image_eat_welcome"
        />

    <TextView
        android:id="@+id/Text_eat_exercise1_name"
        android:layout_height="wrap_content"

        android:text="@string/Exercise_One"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="@id/Image_eat_exercise1"
        app:layout_constraintLeft_toRightOf="@+id/Image_eat_exercise1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="10dp"
        />

    <Button
        android:id="@+id/Button_eat_exercise1_detail"
        android:text="@string/detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintLeft_toRightOf="@+id/Image_eat_exercise1"
        app:layout_constraintTop_toBottomOf="@+id/Text_eat_exercise1_name"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/Button_eat_exercise1_complete"
        android:text="@string/complete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintLeft_toRightOf="@+id/Image_eat_exercise1"
        app:layout_constraintTop_toBottomOf="@+id/Button_eat_exercise1_detail"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ImageView
        android:id="@+id/Image_eat_exercise2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/Exercise_Two"
        android:scaleType="centerCrop"
        android:src="@drawable/exercise002"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintDimensionRatio="4:3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Image_eat_exercise1"
        />

    <TextView
        android:id="@+id/Text_eat_exercise2_name"
        android:layout_height="wrap_content"
        android:text="@string/Exercise_One"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="@id/Image_eat_exercise2"
        app:layout_constraintLeft_toRightOf="@+id/Image_eat_exercise2"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="10dp"
        />

    <Button
        android:id="@+id/Button_eat_exercise2_detail"
        android:text="@string/detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintLeft_toRightOf="@+id/Image_eat_exercise2"
        app:layout_constraintTop_toBottomOf="@+id/Text_eat_exercise2_name"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/Button_eat_exercise2_complete"
        android:text="@string/complete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintLeft_toRightOf="@+id/Image_eat_exercise2"
        app:layout_constraintTop_toBottomOf="@+id/Button_eat_exercise2_detail"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ImageView
        android:id="@+id/Image_eat_exercise3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/Exercise_Three"
        android:scaleType="centerCrop"
        android:src="@drawable/exercise002"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintDimensionRatio="4:3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Image_eat_exercise2"
        />

    <TextView
        android:id="@+id/Text_eat_exercise3_name"
        android:layout_height="wrap_content"
        android:text="@string/Exercise_One"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="@id/Image_eat_exercise3"
        app:layout_constraintLeft_toRightOf="@+id/Image_eat_exercise3"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="10dp"
        />

    <Button
        android:id="@+id/Button_eat_exercise3_detail"
        android:text="@string/detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintLeft_toRightOf="@+id/Image_eat_exercise3"
        app:layout_constraintTop_toBottomOf="@+id/Text_eat_exercise3_name"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/Button_eat_exercise3_complete"
        android:text="@string/complete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintLeft_toRightOf="@+id/Image_eat_exercise3"
        app:layout_constraintTop_toBottomOf="@+id/Button_eat_exercise3_detail"
        app:layout_constraintRight_toRightOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>